@@ -3,9 +3,12 @@ import dto.HttpResponse;
 import enums.HttpStatus;
 
 import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
+import java.util.zip.GZIPInputStream;
+import java.util.zip.GZIPOutputStream;
 
 /**
  * Implementation for each route
@@ -14,20 +17,34 @@ public class RequestHandler {
     private final static String FILE_DIR = System.getProperty("directory", "");
 
     public static HttpResponse home(HttpRequest request) {
-        return new HttpResponse.Builder(HttpStatus.OK).build();
+        return HttpResponse.builder(HttpStatus.OK).build();
     }
 
     public static HttpResponse echo(HttpRequest request) {
         String pathVar = getPathVar(request.getPath());
         String encoding = request.getHeaders().get("Accept-Encoding");
 
-        HttpResponse.Builder response = new HttpResponse.Builder(HttpStatus.OK)
+        HttpResponse.Builder response = HttpResponse.builder(HttpStatus.OK)
                 .header("Content-Length", String.valueOf(pathVar.length()))
-                .body(pathVar);
+                .body(pathVar.getBytes());
 
         //HTTP Compression: support only gzip for now
-        if (encoding !=null && encoding.contains("gzip"))
-            response.header("Content-Encoding", "gzip");
+        if (encoding != null && encoding.contains("gzip")) {
+            try (ByteArrayOutputStream outStream = new ByteArrayOutputStream();
+                 GZIPOutputStream gzipOutStream = new GZIPOutputStream(outStream)) {
+
+                gzipOutStream.write(pathVar.getBytes(StandardCharsets.UTF_8));
+                gzipOutStream.finish();
+                byte[] out = outStream.toByteArray();
+
+                response.header("Content-Encoding", "gzip")
+                        .header("Content-Length", String.valueOf(out.length))
+                        .body(out);
+            } catch (IOException ex) {
+                System.out.println(ex.getMessage());
+                return new HttpResponse.Builder(HttpStatus.ERROR).build();
+            }
+        }
 
         return response.build();
     }
@@ -36,12 +53,12 @@ public class RequestHandler {
         if (request.getHeaders().containsKey("User-Agent")) {
             String headerValue = request.getHeaders().get("User-Agent");
 
-            return new HttpResponse.Builder(HttpStatus.OK)
+            return HttpResponse.builder(HttpStatus.OK)
                     .header("Content-Length", String.valueOf(headerValue.length()))
-                    .body(headerValue)
+                    .body(headerValue.getBytes())
                     .build();
         }
-        return new HttpResponse.Builder(HttpStatus.NOT_FOUND).build();
+        return HttpResponse.builder(HttpStatus.NOT_FOUND).build();
     }
 
     public static HttpResponse getFile(HttpRequest request) {
@@ -51,10 +68,10 @@ public class RequestHandler {
 
         try {
             if (Files.exists(path) && Files.isRegularFile(path)) {
-                return new HttpResponse.Builder(HttpStatus.OK)
+                return HttpResponse.builder(HttpStatus.OK)
                         .header("Content-Type", "application/octet-stream")
                         .header("Content-Length", String.valueOf(Files.size(path)))
-                        .body(Files.readString(path))
+                        .body(Files.readAllBytes(path))
                         .build();
             }
         } catch (IOException e) {
@@ -62,7 +79,7 @@ public class RequestHandler {
             return new HttpResponse.Builder(HttpStatus.ERROR).build();
         }
 
-        return new HttpResponse.Builder(HttpStatus.NOT_FOUND).build();
+        return HttpResponse.builder(HttpStatus.NOT_FOUND).build();
     }
 
     public static HttpResponse postFile(HttpRequest request) {
@@ -74,18 +91,18 @@ public class RequestHandler {
             out.flush();
         } catch (IOException iox) {
             System.out.println(iox.getMessage());
-            return new HttpResponse.Builder(HttpStatus.ERROR).build();
+            return HttpResponse.builder(HttpStatus.ERROR).build();
         }
 
-        return new HttpResponse.Builder(HttpStatus.CREATED).build();
+        return HttpResponse.builder(HttpStatus.CREATED).build();
     }
 
     public static HttpResponse notFound(HttpRequest request) {
-        return new HttpResponse.Builder(HttpStatus.NOT_FOUND).build();
+        return HttpResponse.builder(HttpStatus.NOT_FOUND).build();
     }
 
     public static HttpResponse methodNotAllowed(HttpRequest request) {
-        return new HttpResponse.Builder(HttpStatus.METHOD_NOT_ALLOWED).build();
+        return HttpResponse.builder(HttpStatus.METHOD_NOT_ALLOWED).build();
     }
 
     private static String getPathVar(String path) {
